add back validation

--- a/log.html
+++ b/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8700],[],[[4,0,0,[],[1,80,8619],[[0,5,6,0,0,0,0,0,[1,81,6774],[[0,7,8,0,9,10,0,0,[1,81,6774],[[81,2,11]]]]],[0,12,6,0,0,0,0,0,[1,6855,1776],[[0,13,8,0,14,15,0,0,[1,6855,14],[[6870,2,16]]],[0,17,8,0,18,15,0,0,[1,6870,55],[[6870,2,19]]],[0,17,8,0,18,20,0,0,[1,6925,1707],[[6925,2,21]]]]],[0,22,6,0,0,0,0,0,[1,8632,29],[[0,13,8,0,14,23,0,0,[1,8632,16],[[8648,2,24]]],[0,25,8,0,26,27,0,0,[1,8649,12],[[8661,2,28]]]]],[0,29,6,0,0,0,0,0,[1,8661,8],[[0,30,8,0,31,32,0,0,[1,8662,7],[]]]],[0,33,6,0,0,0,0,0,[1,8669,29],[[0,34,8,0,35,0,0,0,[1,8669,29],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,12278],[],[[4,0,0,[],[1,83,12195],[[0,5,6,0,0,0,0,0,[1,83,5294],[[0,7,8,0,9,10,0,0,[1,84,5293],[[84,2,11]]]]],[0,12,6,0,0,0,0,0,[1,5377,1844],[[0,13,8,0,14,15,0,0,[1,5378,15],[[5392,2,16]]],[0,17,8,0,18,15,0,0,[1,5393,54],[[5393,2,19]]],[0,17,8,0,18,20,0,0,[1,5447,1774],[[5447,2,21]]]]],[0,22,6,0,0,0,0,0,[1,7221,31],[[0,13,8,0,14,23,0,0,[1,7222,18],[[7240,2,24]]],[0,25,8,0,26,27,0,0,[1,7240,12],[[7252,2,28]]]]],[0,29,6,0,0,0,0,0,[1,7252,8],[[0,30,8,0,31,32,0,0,[1,7253,8],[]]]],[0,33,6,0,0,0,0,0,[1,7261,5017],[[0,34,8,0,35,0,0,0,[1,7261,16],[]],[0,36,37,0,38,39,0,0,[1,7278,5001],[[12278,2,40]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Home","*/home/jofran/QA/GIT/Pessoais/Linx-Automation/home.robot","*home.robot","*Cenario 2: Verificar se filial Cascavel está visível","*New Session","*base","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}    browser=chrome    options=add_argument(\"--start-maximized\")","*Opening browser 'chrome' to base url '<a href=\"https://www.linx.com.br/\">https://www.linx.com.br/\x3c/a>'.","*Menu institucional","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*${menuInstitucional}","*Element 'css=a[data-menu-link=\"institutional\"]' is displayed.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element 'css=a[data-menu-link=\"institutional\"]'.","*${matrizEFiliais}","*Clicking element 'css=a[href*=matriz]'.","*Verificar Matriz e filiais","*css=h1","*Element 'css=h1' is displayed.","*Element Should Contain","*<p>Verifies that element <code>locator\x3c/code> contains text <code>expected\x3c/code>.\x3c/p>","*css=h1    matriz e filiais","*Element 'css=h1' contains text 'matriz e filiais'.","*Verificar filial Cascavel","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*${texto_esperado}    timeout=10s    error=Texto \"Filial ${texto_esperado}\" não está presente","*Voltar pagina","*Go Back","*<p>Simulates the user clicking the back button on their browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Home","*/home/jofran/QA/GIT/Pessoais/Linx-Automation/home.robot","*home.robot","*Cenario 2: Verificar se filial Cascavel está visível","*New Session","*base","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}    browser=chrome    options=add_argument(\"--start-maximized\")","*Opening browser 'chrome' to base url '<a href=\"https://www.linx.com.br/\">https://www.linx.com.br/\x3c/a>'.","*Menu institucional","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*${menuInstitucional}","*Element 'css=a[data-menu-link=\"institutional\"]' is displayed.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element 'css=a[data-menu-link=\"institutional\"]'.","*${matrizEFiliais}","*Clicking element 'css=a[href*=matriz]'.","*Verificar Matriz e filiais","*css=h1","*Element 'css=h1' is displayed.","*Element Should Contain","*<p>Verifies that element <code>locator\x3c/code> contains text <code>expected\x3c/code>.\x3c/p>","*css=h1    matriz e filiais","*Element 'css=h1' contains text 'matriz e filiais'.","*Verificar filial Cascavel","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*${filialCascavel}    timeout=10s    error=Texto \"Filial ${filialCascavel}\" não está presente","*Voltar pagina","*Go Back","*<p>Simulates the user clicking the back button on their browser.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Slept 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Home","name":"Home","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Home","name":"Home","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1712802493099;
+window.output["baseMillis"] = 1712802924756;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8702;
+window.output["generated"] = 12280;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
