--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12278],[],[[4,0,0,[],[1,83,12195],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,8505],[],[[4,0,0,[],[0,115,8389,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Home","*/home/jofran/QA/GIT/Pessoais/Linx-Automation/home.robot","*home.robot","*Cenario 2: Verificar se filial Cascavel está visível"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Home","*/home/jofran/QA/GIT/Pessoais/Linx-Automation/home.robot","*home.robot","* Cenario 4: Selecionar institucionalCarreiras","*error=Texto \"Segmento Linx - Suporte\" está presente na lista\""]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Home","name":"Home","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"Home","name":"Home","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1712802924756;
+window.output["baseMillis"] = 1712805755813;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12280;
+window.output["generated"] = 8508;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
